Update view names

--- a/room_manager/templates/room_manager/index.html
+++ b/room_manager/templates/room_manager/index.html
@@ -13,7 +13,7 @@
     <div class="col-sm-12 col-md">
         <p>
             <h3>Where to start</h3>
-            Go to <strong><a href="{% url 'rooms' %}">Rooms</a></strong> and see what room you want a reservation for. Click on the room and press "Make reservation".
+            Go to <strong><a href="{% url 'room_manager.rooms' %}">Rooms</a></strong> and see what room you want a reservation for. Click on the room and press "Make reservation".
         </p>
     </div>
 </div>
