--- a/room_manager/templates/room_manager/rooms.html
+++ b/room_manager/templates/room_manager/rooms.html
@@ -24,7 +24,7 @@
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eros erat, facilisis at eros in, fringilla scelerisque
                     ex. Donec commodo, erat sit amet eleifend maximus, risus augue suscipit orci, vitae fermentum leo nibh rutrum enim.
                     Maecenas eget eros sit amet urna dapibus congue. Proin egestas dolor eu sem auctor, vitae euismod leo faucibus.</p>
-                    <a href="{% url 'make_reservation' room_id=room.id %}" class="btn btn-success float-right">Make reservation</a>
+                    <a href="{% url 'room_manager.make_reservation' room_id=room.id %}" class="btn btn-success float-right">Make reservation</a>
                 </div>
             </div>
         </div>
