--- a/room_manager/templates/room_manager/layout.html
+++ b/room_manager/templates/room_manager/layout.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -28,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/rooms/">Home</a>
+                    <a class="nav-link" href="{% url 'room_manager.index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/rooms/rooms">Rooms</a>
+                    <a class="nav-link" href="{% url 'room_manager.rooms' %}">Rooms</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/rooms/reservations">Reservations</a>
+                    <a class="nav-link" href="{% url 'room_manager.reservations' %}">Reservations</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/rooms/SorryItWasALie">Cake</a>
