--- a/room_manager/templates/room_manager/reservations.html
+++ b/room_manager/templates/room_manager/reservations.html
@@ -31,7 +31,9 @@
                         <td>{{reservation.startdate.hour}}:{{reservation.startdate.minute}}</td>
                         <td>{{reservation.enddate.hour}}:{{reservation.enddate.minute}}</td>
                         <td>{{reservation.organisor.first_name}} {{reservation.organisor.last_name}}</td>
-                        <td><strong><a href="#&removeId={{ reservation.id }}" class="text-danger">&times;</a></strong></td>
+                        <td>
+                            <strong><a href="{% url 'room_manager.delete_reservation' reservation_id=reservation.id %}" class="text-danger">&times;</a></strong>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
